PartyPalace/force-app/main/default/objects/Transaction__c/fields/Products_Cost__c.field-meta.xml
<CustomField>
    <fullName>Products_Cost__c</fullName>
    <label>Products Cost</label>
    <summarizedField>Product_Line__c.Total_Cost__c</summarizedField>
    <summaryForeignKey>Product_Line__c.Transaction__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>