PartyPalace/force-app/main/default/objects/Transaction__c/fields/Rental_Cost__c.field-meta.xml
<CustomField>
    <fullName>Rental_Cost__c</fullName>
    <label>Rental Cost</label>
    <summarizedField>Rental_Line__c.Total_Cost__c</summarizedField>
    <summaryForeignKey>Rental_Line__c.Transaction__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>