PartyPalace/force-app/main/default/objects/Transaction__c/fields/Store_Location__c.field-meta.xml
<CustomField>
    <fullName>Store_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Store Location</label>
    <referenceTo>Store_Location__c</referenceTo>
    <relationshipLabel>Transactions</relationshipLabel>
    <relationshipName>Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>